--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,7 @@
         android:layout_height="wrap_content"
         android:textSize="30dp"
         android:text="Welcome To TakeMeTo "
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="104dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
