--- a/app/src/main/res/layout/activity_search_trip.xml
+++ b/app/src/main/res/layout/activity_search_trip.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mmm.istic.takemeto.Vue.searchTripActivity">
+    tools:context="com.mmm.istic.takemeto.Vue.SearchTripActivity">
 
     <TextView
         android:text="departure date"
