--- a/app/src/main/res/layout/activity_search_trip.xml
+++ b/app/src/main/res/layout/activity_search_trip.xml
@@ -79,7 +79,7 @@
                 android:layout_alignTop="@+id/textView7"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:id="@+id/editText4"
+                android:id="@+id/edit_newuser_email"
                 android:hint="Enter your arrival date" />
 
             <EditText
@@ -101,7 +101,7 @@
                 android:layout_alignTop="@+id/textView9"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:id="@+id/editText6"
+                android:id="@+id/edit_newuser_password"
                 android:hint="Arrival place" />
 
             <Button
@@ -110,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/button6"
                 android:layout_marginTop="24dp"
-                android:layout_below="@+id/editText6"
+                android:layout_below="@+id/edit_newuser_password"
                 android:layout_toRightOf="@+id/textView8"
                 android:layout_toEndOf="@+id/textView8" />
         </RelativeLayout>
