--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -61,13 +61,13 @@
         android:layout_marginRight="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginTop="145dp"
-        android:id="@+id/edit_signin_password"
+        android:id="@+id/edit_signin_prenom"
         android:hint="Enter your Password" />
 
     <Button
         android:text="Sign IN"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_signin_password"
+        android:layout_below="@+id/edit_signin_prenom"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="47dp"
         android:layout_width="200dp"
@@ -79,8 +79,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button"
-        android:layout_alignRight="@+id/edit_signin_password"
-        android:layout_alignEnd="@+id/edit_signin_password"
+        android:layout_alignRight="@+id/edit_signin_prenom"
+        android:layout_alignEnd="@+id/edit_signin_prenom"
         android:textSize="15dp"
         android:textStyle="italic"
         android:textColor="@color/colorPrimary"
