--- a/app/src/main/res/layout/activity_suggest_trip.xml
+++ b/app/src/main/res/layout/activity_suggest_trip.xml
@@ -70,7 +70,7 @@
         android:layout_alignTop="@+id/textView7"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/edit_newuser_email"
+        android:id="@+id/edit_form_email"
         android:hint="Enter your arrival date" />
 
     <EditText
@@ -81,7 +81,7 @@
         android:layout_alignTop="@+id/textView8"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/editText5"
+        android:id="@+id/edit_form_date_naissance"
         android:hint="Departure place" />
 
     <EditText
@@ -92,14 +92,14 @@
         android:layout_alignTop="@+id/textView9"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/edit_newuser_password"
+        android:id="@+id/edit_form_password"
         android:hint="Arrival place" />
 
     <TextView
         android:text="NbPlacesMax"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_newuser_password"
+        android:layout_below="@+id/edit_form_password"
         android:layout_alignLeft="@+id/textView9"
         android:layout_alignStart="@+id/textView9"
         android:layout_marginTop="12dp"
