--- a/app/src/main/res/layout/activity_search_trip.xml
+++ b/app/src/main/res/layout/activity_search_trip.xml
@@ -68,7 +68,7 @@
                 android:layout_alignTop="@+id/textView6"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:id="@+id/editText3"
+                android:id="@+id/edit_suggest_trip_date_depart"
                 android:hint="Enter your departure date" />
 
             <EditText
@@ -79,7 +79,7 @@
                 android:layout_alignTop="@+id/textView7"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:id="@+id/edit_form_email"
+                android:id="@+id/edit_suggest_trip_date_arrivee"
                 android:hint="Enter your arrival date" />
 
             <EditText
@@ -90,7 +90,7 @@
                 android:layout_alignTop="@+id/textView8"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:id="@+id/edit_form_date_naissance"
+                android:id="@+id/edit_suggest_trip_depart_place"
                 android:hint="Departure place" />
 
             <EditText
@@ -101,7 +101,7 @@
                 android:layout_alignTop="@+id/textView9"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:id="@+id/edit_form_password"
+                android:id="@+id/edit_suggest_trip_arrival_place"
                 android:hint="Arrival place" />
 
             <Button
@@ -110,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/button6"
                 android:layout_marginTop="24dp"
-                android:layout_below="@+id/edit_form_password"
+                android:layout_below="@+id/edit_suggest_trip_arrival_place"
                 android:layout_toRightOf="@+id/textView8"
                 android:layout_toEndOf="@+id/textView8" />
         </RelativeLayout>
