change register form

--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,122 +12,124 @@
     tools:context="com.mmm.istic.takemeto.Vue.FormActivity">
 
     <TextView
-        android:text="Register Form"
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView6"
+        android:text="Register Form"
         android:textSize="24sp" />
 
     <TextView
-        android:text=" please answer all the input"
+        android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView7"
-        android:layout_weight="1"
-        android:textSize="18sp"
-        android:layout_below="@+id/textView6"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView6"
+        android:layout_weight="1"
+        android:text=" please answer all the input"
+        android:textSize="18sp" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView7"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView7"
+        android:layout_weight="10">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true">
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:orientation="vertical">
 
             <TextView
-                android:text="Last Name : "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/textView1"
-                android:layout_weight="1" />
-
-            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
+                android:layout_weight="1"
+                android:text="Last Name : " />
+
+            <EditText
                 android:id="@+id/edit_form_nom"
-                android:layout_weight="1"
-                android:hint="Smith" />
-
-            <TextView
-                android:text="First name : "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="Smith"
+                android:inputType="textPersonName" />
+
+            <TextView
                 android:id="@+id/textView2"
-                android:layout_weight="1" />
-
-            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
+                android:layout_weight="1"
+                android:text="First name : " />
+
+            <EditText
                 android:id="@+id/edit_form_prenom"
-                android:layout_weight="1"
-                android:hint="John" />
-
-            <TextView
-                android:text="Email : "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="John"
+                android:inputType="textPersonName" />
+
+            <TextView
                 android:id="@+id/textView3"
-                android:layout_weight="1" />
-
-            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:ems="10"
+                android:layout_weight="1"
+                android:text="Email : " />
+
+            <EditText
                 android:id="@+id/edit_suggest_trip_date_arrivee"
-                android:layout_weight="1"
-                android:hint="example@example.com" />
-
-            <TextView
-                android:text="Birthday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="example@example.com"
+                android:inputType="textEmailAddress" />
+
+            <TextView
                 android:id="@+id/textView4"
-                android:layout_weight="1" />
-
-            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:layout_weight="1"
+                android:text="Birthday" />
+
+            <EditText
                 android:id="@+id/edit_suggest_trip_depart_place"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="01/01/2058"
-                android:focusable="false"/>
+                android:ems="10"
+                android:focusable="false"
+                android:hint="01/01/2058" />
 
 
             <TextView
-                android:text="Password : "
+                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView5"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:text="Password : " />
 
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
                 android:id="@+id/edit_suggest_trip_arrival_place"
-                android:layout_weight="1"
-                android:hint="StrongPassword" />
-            <TextView
-                android:text="Phone : "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="StrongPassword"
+                android:inputType="textPassword" />
+
+            <TextView
                 android:id="@+id/textView_form_phone"
-                android:layout_weight="1" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Phone : " />
 
             <EditText
                 android:id="@+id/edit_form_phone"
@@ -138,19 +141,16 @@
                 android:inputType="phone" />
 
 
-
-
-
         </LinearLayout>
     </ScrollView>
 
     <Button
-        android:text="Create New User"
+        android:id="@+id/CreateNewUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/CreateNewUser"
+        android:layout_alignParentBottom="true"
         android:layout_weight="1"
         android:onClick="OnClickFunction"
-        android:layout_alignParentBottom="true"/>
+        android:text="Create New User" />
 
-</RelativeLayout>
+</LinearLayout>
