--- a/app/src/main/res/layout/activity_my_list_trips.xml
+++ b/app/src/main/res/layout/activity_my_list_trips.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="45dp" />
+        android:layout_marginTop="45dp"
+        android:id="@+id/listeViewTrajets"/>
 
     <TextView
         android:text="Welcome"
