fnish users profiel activity

--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="1"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,70 +14,83 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_weight="5">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <TextView
-                android:text="First name :"
+                android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView" />
+                android:text="First name :" />
 
             <TextView
-                android:text="John"
+                android:id="@+id/p_prenom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView9" />
+                android:text="---" />
 
             <TextView
-                android:text="Last name :"
+                android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView10" />
+                android:text="Last name :" />
 
             <TextView
-                android:text="TextView"
+                android:id="@+id/p_nom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="---" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Email :" />
+
+            <TextView
+                android:id="@+id/p_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="---@---.---" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Birthday :" />
+
+            <TextView
+                android:id="@+id/p_birthdate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="--/--/----" />
+
+            <TextView
                 android:id="@+id/textView11"
-                tools:text="Doe" />
-
-            <TextView
-                android:text="Email :"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView12" />
+                android:text="Phone :" />
 
             <TextView
-                android:text="johnDoe@example.com"
+                android:id="@+id/p_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView13" />
-
-            <TextView
-                android:text="Birthday :"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView14" />
-
-            <TextView
-                android:text="01/01/2152"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView15" />
+                android:text="+33----------" />
 
         </LinearLayout>
     </ScrollView>
 
     <Button
-        android:text="Modify"
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button1"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_weight="1"
+        android:text="Modify" />
 
-</RelativeLayout>
+</LinearLayout>
